@@ -6,6 +6,7 @@
 
 ====Bug Fixes====
 * Fixed #1534 - Attempt to register unknown event "WORLD_MAP_UPDATE"
+* Fixed cusor position in tall textboxes sometimes being incorrect due to a Blizzard bug with FontString:SetSpacing()
 
 ===v8.5.1===
 * Changed DR reset duration to 20 seconds from 18 to increase consistency.
